fix: add youtube domains to fix videos on mobile.

--- a/about/about-overview/about-overview.import.less
+++ b/about/about-overview/about-overview.import.less
@@ -1,6 +1,6 @@
 .about-overview-video {
-  width: 320px;
-  height: 180px;
+  width: 300px;
+  height: 170px;
 }
 
 @media (min-width: 700px) {
